mention that it is also possible to download low-res versions from Google
2007-10-25  Raphael Quinet  <raphael@gimp.org>

	* release-notes/gimp-2.4-videos.htrw: mention that it is also
	possible to download low-res versions from Google Video.

svn path=/branches/v2.4/; revision=1704

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-25  Raphaël Quinet  <raphael@gimp.org>
 
+	* release-notes/gimp-2.4-videos.htrw: mention that it is also
+	possible to download low-res versions from Google Video.
+
+2007-10-25  Raphaël Quinet  <raphael@gimp.org>
+
 	* release-notes/gimp-2.4.htrw: un-break the layout.
 
 	* release-notes/images/2.4-video-fgselect.jpg: improved version.
