added top and bottom margins to img.right and img.left.
2007-10-25  Raphael Quinet  <raphael@gimp.org>

	* style/wgo.css: added top and bottom margins to img.right and
	img.left.

svn path=/branches/v2.4/; revision=1706

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-25  Raphaël Quinet  <raphael@gimp.org>
 
+	* style/wgo.css: added top and bottom margins to img.right and
+	img.left.
+
+2007-10-25  Raphaël Quinet  <raphael@gimp.org>
+
 	* macintosh/index.htrw: mention that gimp.app has 2.4-rc3.
 
 	* downloads/Mac.xhtml: corrected typo and added missing parameter
