removed the top margins because they caused all images to be shifted down
2007-10-26  Raphael Quinet  <raphael@gimp.org>

	* style/wgo.css: removed the top margins because they caused all
	images to be shifted down and not aligned anymore with the text.

svn path=/branches/v2.4/; revision=1707

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-26  Raphaël Quinet  <raphael@gimp.org>
+
+	* style/wgo.css: removed the top margins because they caused all
+	images to be shifted down and not aligned anymore with the text.
+
 2007-10-25  Raphaël Quinet  <raphael@gimp.org>
 
 	* style/wgo.css: added top and bottom margins to img.right and
