added links to the nabble.com list archives.
2007-10-27  Raphael Quinet  <raphael@gimp.org>

	* mail_lists.htrw: added links to the nabble.com list archives.

svn path=/branches/v2.4/; revision=1709

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-27  Raphaël Quinet  <raphael@gimp.org>
+
+	* mail_lists.htrw: added links to the nabble.com list archives.
+
 2007-10-26  Raphaël Quinet  <raphael@gimp.org>
 
 	* tutorials/Basic_Scheme/index.htrw
