added link to the UI brainstorm.
2007-10-27  Raphael Quinet  <raphael@gimp.org>

	* develop/index.htrw: added link to the UI brainstorm.

svn path=/branches/v2.4/; revision=1710

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-10-27  Raphaël Quinet  <raphael@gimp.org>
 
+	* develop/index.htrw: added link to the UI brainstorm.
+
 	* mail_lists.htrw: added links to the nabble.com list archives.
 
 2007-10-26  Raphaël Quinet  <raphael@gimp.org>
