--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-31  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4-videos.htrw: Added Ogg/Theora versions of
+	two of the videos (converted using ffmpeg2theora, quality 3).
+
+2007-10-30  Raphaël Quinet  <raphael@gimp.org>
+
+	Replaced SVN trunk by contents of v2.4 branch.
+
 2007-10-30  Raphaël Quinet  <raphael@gimp.org>
 
 	* programmatic/downloads/MIRRORS: updated from the master copy on
