--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-31  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.4.1 release.
+
 2007-10-31  Raphaël Quinet  <raphael@gimp.org>
 
 	* irc.htrw: link to the information about GTK+ and GNOME channels,
