--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-31  Raphaël Quinet  <raphael@gimp.org>
+
+	* about/splash/stable.html
+	* about/splash/unstable-1.1.htrw
+	* about/splash/unstable-1.3.htrw
+	* about/splash/unstable-2.1.htrw
+	* about/splash/unstable-2.3.htrw: include image-license.inc.
+
+	* includes/image-license.inc: copyright blurb about images.
+
 2007-10-31  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.4.1 release.
