--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-31  Raphaël Quinet  <raphael@gimp.org>
 
+	* about/history.htrw: added the release date of GIMP 2.4.1.
+
+2007-10-31  Raphaël Quinet  <raphael@gimp.org>
+
 	* about/splash/stable.html
 	* about/splash/unstable-1.1.htrw
 	* about/splash/unstable-1.3.htrw
