--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-15  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: removed bold tag from MD5 sums.
+
 2007-11-10  Simon Budig  <simon@gimp.org>
 
         * about/merchandise.htrw: fixed link to kernelconcepts.
