--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-20  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml
+	* macintosh/index.htrw: removed some cruft, link to the "Wilber
+	loves Apple" website as the primary source for binary packages.
+
 2007-11-15  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: removed bold tag from MD5 sums.
