--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-21  Sven Neumann  <sven@gimp.org>
+
+	* about/history.htrw
+	* downloads/source.xhtml: updated for GIMP 2.4.2 release.
+
 2007-11-20  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml
