updated download link for 2.4.2.
2007-11-22  Sven Neumann  <sven@gimp.org>

	* downloads/Windows.xhtml: updated download link for 2.4.2.


svn path=/trunk/; revision=1732

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-22  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Windows.xhtml: updated download link for 2.4.2.
+
 2007-11-21  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Windows.xhtml: link directly to the installer as we do
