added information for Mandriva. Fixes the main part of bug #498825.
2007-11-22  Raphael Quinet  <raphael@gimp.org>

	* downloads/Linux.xhtml: added information for Mandriva.  Fixes
	the main part of bug #498825.

svn path=/trunk/; revision=1733

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-22  Raphaël Quinet  <raphael@gimp.org>
+
+	* downloads/Linux.xhtml: added information for Mandriva.  Fixes
+	the main part of bug #498825.
+
 2007-11-22  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Windows.xhtml: updated download link for 2.4.2.
