--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-23  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml: updated download link for Intel Tiger.
+
 2007-11-22  Raphaël Quinet  <raphael@gimp.org>
 
 	* downloads/Linux.xhtml: added information for Mandriva.  Fixes
