changed download links to point to wilber-loves-apple.org.
2007-11-23  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: changed download links to point to
	wilber-loves-apple.org.


svn path=/trunk/; revision=1735

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-23  Sven Neumann  <sven@gimp.org>
 
+	* downloads/Mac.xhtml: changed download links to point to
+	wilber-loves-apple.org.
+
+2007-11-23  Sven Neumann  <sven@gimp.org>
+
 	* downloads/Mac.xhtml: updated download link for Intel Tiger.
 
 2007-11-22  Raphaël Quinet  <raphael@gimp.org>
