--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml: changed download links to point to
+	the new locations at sourceforge.net.
+
 2007-11-23  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml: changed download links to point to
