updated download link for PowerPC Leopard.
2007-11-26  Sven Neumann  <sven@gimp.org>

	* downloads/Mac.xhtml: updated download link for PowerPC Leopard.

svn path=/trunk/; revision=1737

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-26  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml: updated download link for PowerPC Leopard.
+
 2007-11-24  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml: changed download links to point to
