--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-11-26  Sven Neumann  <sven@gimp.org>
 
+	* macintosh/index.htrw: updated X11 section.
+
 	* downloads/Mac.xhtml: updated download link for PowerPC Leopard.
 
 2007-11-24  Sven Neumann  <sven@gimp.org>
