--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-28  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: added link to Ubuntu package; sorted distros
+	alphabetically.
+
 2007-11-26  Sven Neumann  <sven@gimp.org>
 
 	* macintosh/index.htrw: updated X11 section.
