--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-29  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml: point to the Download page at
+	wilber-loves-apple.org; they are changing the binaries too often
+	to keep track.
+
 2007-11-28  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: link to Debian package search.
