--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-30  Manish Singh  <yosh@gimp.org>
+
+	* unix/index.htrw: fix deb link.
+
 2007-11-30  Sven Neumann  <sven@gimp.org>
 
 	* images/wilber_reading.png: updated using wilber-reading.svg from
