--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-30  Sven Neumann  <sven@gimp.org>
+
+	* programmatic/admin/news/icons/wilber_reading.png: also update
+	the icon here.
+
 2007-11-30  Manish Singh  <yosh@gimp.org>
 
 	* unix/index.htrw: fix deb link.
