updated for GIMP 2.4.3 release.
2007-12-16  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.4.3 release.


svn path=/trunk/; revision=1757

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-16  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.4.3 release.
+
 2007-12-06  Raphaël Quinet  <raphael@gimp.org>
 
 	* images/news-icons/release-development.png: new icon for unstable
