--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-29  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* downloads/Windows.xhtml: updated link to 2.4.3.
+
 2007-12-20  Sven Neumann  <sven@gimp.org>
 
 	* windows/index.htrw: link to the "stable" version.
