--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-30  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.4.4 release.
+
 2008-01-29  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GAP 2.4.0 release.
