added links to the tutorials and books pages.
2008-01-30  Sven Neumann  <sven@gimp.org>

        * docs/index.htrw: added links to the tutorials and books pages.

svn path=/trunk/; revision=1762

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-30  Sven Neumann  <sven@gimp.org>
 
+	* docs/index.htrw: added links to the tutorials and books pages.
+
+2008-01-30  Sven Neumann  <sven@gimp.org>
+
 	* downloads/source.xhtml: updated for GIMP 2.4.4 release.
 
 2008-01-29  Sven Neumann  <sven@gimp.org>
