--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-30  Sven Neumann  <sven@gimp.org>
 
+	* includes/wgo-page-fini.xhtml: updated copyright.
+
+2008-01-30  Sven Neumann  <sven@gimp.org>
+
 	* docs/index.htrw: added links to the tutorials and books pages.
 
 2008-01-30  Sven Neumann  <sven@gimp.org>
