--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-31  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* downloads/Windows.xhtml: updated link to 2.4.4 installer.
+
 2008-01-30  Sven Neumann  <sven@gimp.org>
 
 	* includes/wgo-page-fini.xhtml: updated copyright.
