updated for GIMP 2.4.5 release.
2008-02-29  Sven Neumann  <sven@gimp.org>

        * downloads/source.xhtml: updated for GIMP 2.4.5 release.


svn path=/trunk/; revision=1768

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-29  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.4.5 release.
+
 2008-02-20  Raphaël Quinet  <raphael@gimp.org>
 
 	* tutorials/Using_GAP/gap-big.png
