--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* downloads/Windows.xhtml: updated link to 2.4.5 installer. 
+
 2008-03-06  Sven Neumann  <sven@gimp.org>
 
 	* unix/howtos/tile_cache.htrw: updated size calculation to take
