--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-17  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Mac.xhtml: updated links.
+
 2008-03-08  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* downloads/Windows.xhtml: updated link to 2.4.5 installer. 
