updated link here as well.
2008-03-26  Sven Neumann  <sven@gimp.org>

	* macintosh/index.html: updated link here as well.

svn path=/trunk/; revision=1772

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-26  Sven Neumann  <sven@gimp.org>
+
+	* macintosh/index.html: updated link here as well.
+
 2008-03-17  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml: updated links.
