--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-09  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.5.htrw: added release notes for 2.5.
+
+	* release-notes/index.htrw: link to the 2.5 release notes.
+
 2008-03-26  Sven Neumann  <sven@gimp.org>
 
 	* macintosh/index.html: updated link here as well.
