--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-10  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.5.htrw: moved badge up to the top.
+
 2008-04-09  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.5.0 release.
