--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-04-10  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/index.htrw
+	* about/splash/unstable-2.5.htrw
+	* about/splash/images/gimp-splash-r25458.png
+	* about/splash/images/gimp-splash-r25458-t.png: added new page
+	with GIMP 2.5 splash screens.
+
+	* about/splash/images/gimp_splash-t.png: removed unused image.
+
+2008-04-10  Sven Neumann  <sven@gimp.org>
+
 	* release-notes/gimp-2.5.htrw: moved badge up to the top.
 
 2008-04-09  Sven Neumann  <sven@gimp.org>
