--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-11  Jakub Steiner <jimmac@ximian.com>
+
+	* about/splash/index.htrw
+	* release-notes/gimp-2.4.htrw: add a splashbg class
+	* style/wgo.css: don't depend on that class to exist though
+
 2008-04-10  Sven Neumann  <sven@gimp.org>
 
 	* about/splash/index.htrw
