--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-29  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.4.6 release.
+
 2008-04-11  Jakub Steiner <jimmac@ximian.com>
 
 	* about/splash/index.htrw
