--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-14  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.5.htrw: removed the pledge for LGM donations.
+
 2008-06-03  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Windows.xhtml: updated link to 2.4.6 installer.
