updated for GIMP 2.5.1 release.
2008-06-15  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.1 release.


svn path=/trunk/; revision=1787

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-15  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.5.1 release.
+
 2008-06-14  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.5.htrw: removed the pledge for LGM donations.
