updated and added new development splash screen.
2008-08-21  Sven Neumann  <sven@gimp.org>

	* about/splash/unstable-2.5.htrw: updated and added new
	development splash screen.


svn path=/trunk/; revision=1789

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-21  Sven Neumann  <sven@gimp.org>
+
+	* about/splash/unstable-2.5.htrw: updated and added new
+	development splash screen.
+
 2008-07-16  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.5.2 release.
