updated for GIMP 2.4.7 release.
2008-08-21  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.4.7 release.


svn path=/trunk/; revision=1790

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-21  Sven Neumann  <sven@gimp.org>
 
+	* downloads/source.xhtml: updated for GIMP 2.4.7 release.
+
+2008-08-21  Sven Neumann  <sven@gimp.org>
+
 	* about/splash/unstable-2.5.htrw: updated and added new
 	development splash screen.
 
