--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-21  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* programmatic/downloads/MIRRORS: added more mirrors
+
 2008-08-21  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: updated for GIMP 2.4.7 release.
