--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* release-notes/gimp-2.5.htrw: applied modified patch by
+	Alexia Death.
+
 2008-08-21  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* programmatic/downloads/MIRRORS: added more mirrors
