updated for GIMP 2.5.3 release.
2008-08-21  Sven Neumann  <sven@gimp.org>

	* downloads/source.xhtml: updated for GIMP 2.5.3 release.


svn path=/trunk/; revision=1794

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-21  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.5.3 release.
+
 2008-08-21  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* about/merchandise.htrw: 
