--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-23  Sven Neumann  <sven@gimp.org>
 
+	* release-notes/gimp-2.5.htrw: removed a spurious "also" in the
+	brush dynamics section.
+
+2008-08-23  Sven Neumann  <sven@gimp.org>
+
 	* screenshots/index.htrw: reverted last change.
 
 	* screenshots/linux_dualscreen_griatch_art_thumb.jpg: cropped the
