--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/Windows.xhtml: updated link to 2.4.7 installer.
+
 2008-08-23  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.5.htrw: removed a spurious "also" in the
