updated polish link
2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>

	* links/index.htrw: updated polish link 

svn path=/trunk/; revision=1800

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* links/index.htrw: updated polish link 
+
 2008-08-24  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Windows.xhtml: updated link to 2.4.7 installer.
