added Polish IRC channel #gimp-pl on Freenode.
2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>

	* irc.htrw: added Polish IRC channel #gimp-pl on Freenode.

svn path=/trunk/; revision=1801

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>
 
+	* irc.htrw: added Polish IRC channel #gimp-pl on Freenode.
+
+2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>	
+
 	* links/index.htrw: updated polish link 
 
 2008-08-24  Sven Neumann  <sven@gimp.org>
