--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-16  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: updated for GIMP 2.5.4 release.
+
 2008-09-01  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* programmatic/admin/news/wgo_news.py: module rfc822 is obsolete.
