--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-20  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* release-notes/gimp-2.6.htrw: Added an Introduction paragraph and
+	copied most of the notes from gimp-2.5.htrw to here, and also did
+	some restructuring.
+
 2008-09-19  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* release-notes/gimp-2.6.htrw: Added, waiting to be fed with
