--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-01  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.6.htrw: added a note about the new text
+	API in the PDB.
+
 2008-10-01  Martin Nordholts  <martinn@svn.gnome.org>
 
 	Merged the GIMP 2.6 branch (branches/v2.6, r1808:1875) to trunk.
