--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-10-01  Sven Neumann  <sven@gimp.org>
 
+	* index.htrw: replaced generated news with a static version that
+	includes a news entry about the 2.6.0 release. The news admin
+	interface appears to have problems. As soon as this has been
+	addressed and a news entry for 2.6.0 is added, this change should
+	be reverted.
+
+2008-10-01  Sven Neumann  <sven@gimp.org>
+
 	* release-notes/gimp-2.6.htrw: added a note about the new text
 	API in the PDB.
 
