--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-01  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* release-notes/gimp-2.6.htrw (GIMP 2.6 Screenshots): Move the
+	screenshot of the experimental GEGL Operation tool to the bottom
+	of the screenshots.
+
 2008-10-01  Sven Neumann  <sven@gimp.org>
 
 	* index.htrw
