--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-10-01  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* index.htrw: Added last minute build fix instructions for the
+	GIMP 2.6.0 tarball.
+
+2008-10-01  Martin Nordholts  <martinn@svn.gnome.org>
+
 	* release-notes/gimp-2.6.htrw (GIMP 2.6 Screenshots): Move the
 	screenshot of the experimental GEGL Operation tool to the bottom
 	of the screenshots.
