--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-03  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* release-notes/gimp-2.6.htrw (Known Problems): Some people might
+	be unfamiliar with GNOME, so say 'Linux GNOME desktop' instead of
+	just 'GNOME desktop'.
+
 2008-10-02  Michael Natterer  <mitch@gimp.org>
 
 	* programmatic/downloads/MIRRORS: fixed mirror location to be
